--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="candidateImg">
                 <img src="./images/Kate.JPG" alt="Candidate Image" />
             </div>
-            <h2>Kate Winslet<br /><span>Software Developer</span></h2>
+            <h2>Daman Jeet Singh<br /><span>Software Developer</span></h2>
         </div>
         <!-- Candidate Contact Information -->
         <div class="contactInfo">
